--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -26,7 +26,7 @@
     <header class="site-header">
         <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
           <div class="container" >
-            <a href="/"> <img src="static\home\fers1.png"  weight="50px" height="60px"></a>
+            <a href="/"> <img src="/static/home/fers1.png"  weight="80px" height="80px"></a>
           
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -35,35 +35,22 @@
               <!-- Navbar Right Side -->
               <div class="navbar-nav">
                 {% if user.is_authenticated %}
-                  <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
+                  <a class="nav-item nav-link" src="/static/home/fers1.png" href="{% url 'logout' %}"><img src="/static/home/logout.png"  weight="50px" height="60px"></a>
                 {% endif %}
               </div>
           </div>
         </nav>
       </header> 
 
-  
-      <main role="main" class="container">
-        <div class="row">
-          <div class="col-md-8">
-            {% if messages %}
-             {% for message in messages%}
-             <div class="alert alert-{{ message.tags }}">
-               {{ message }}
-             </div>
-             {% endfor %}
-            {% endif %}
+      <div class="border border-light p-3 mb-4 text-center"></div>
+        
+    
+           
             {% block content %}      {% endblock %}
-          </div>
-                 <ul class="list-group">
-                  <li class="list-group-item list-group-item-light ">Show History</li>
-                  <li class="list-group-item list-group-item-light ">Report Bug</li>
-                </ul>
-              </p>
+         
+          </div>       
           
-          </div>
-        </div>
-      </main>
+    
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
