--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -1,8 +1,8 @@
 {% extends "home/base.html" %}
 {% block content %}    
-        <h2>You have been logged out</h2>
+        <h2 class="text-center text-danger">You have been logged out</h2>
     
-    <div class="border-top pt-3">
+    <div class="border-top pt-3 text-center">
       <small class="text-muted">
         <a href="{% url 'login' %}" >Log In Again</a>
       </small>
